Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.4
-
Fix Version/s: 10.5.7
-
Component/s: Server
-
Labels:None
Description
If the build environment does not support PCLMUL, then crc32_x86.c is not compiled in, and this fails to link.
Only call the functions in crc32_x86.c if they have been included.
fixes builds on older processors without PCLMUL
see: https://trac.macports.org/ticket/61063
Patch of interest dec3f8ca69e5e
Attachments
Issue Links
- is caused by
-
MDEV-22641 Provide SIMD optimized wrapper for zlib crc32()
-
- Closed
-