MDEV-23585: checksum.c: call CLMUL functions only if available

if the cmake test for HAVE_CLMUL_INSTRUCTION fails,
then these functions are not available at link time.

Also, test HAVE_CLMUL_INSTRUCTION on all suitable
processors